--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,9 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>scen-${artifactId}</finalName>
+    </build>
+
 
 </project>
